--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,9 @@ layout: compress
     </div>
 
     {% include scripts.html %}
+    
+    <!-- Site-wide Visitor Tracker -->
+    <script src="{{ base_path }}/visitor-tracker.js"></script>
 
   </body>
 </html>
