--- a/aacr2025/_layouts/default.html
+++ b/aacr2025/_layouts/default.html
@@ -30,7 +30,7 @@
     <script src="{{ '/ct_abstracts/clinical_trial_data.js' | relative_url }}"></script>
     <script src="{{ '/dashboard.js' | relative_url }}"></script>
     
-    <!-- Site-wide Visitor Tracker -->
-    <script src="{{ '../visitor-tracker.js' | relative_url }}"></script>
+    <!-- Site-wide Visitor Tracker (loaded after dashboard) -->
+    <script src="{{ '/visitor-tracker.js' | relative_url }}"></script>
 </body>
 </html>
